--- a/src/components/ui/CtaHighlight/CtaHighlight.scss
+++ b/src/components/ui/CtaHighlight/CtaHighlight.scss
@@ -11,6 +11,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    .CtaHighlight_text {
+      p {
+        margin: 1rem 0;
+      }
+    }
   }
 
   .CtaHighlight_cta_container {
